# Reddit-Sentiment-Analysis

./: .env.example  .gitignore  LICENSE  README.md  check_env.py  fix_email_config.py  pyproject.toml  reddit_api_test_results.txt  run_app.py  test_email.py  test_workflow.py
app/: .env.example  .gitignore  README.md  cli_removal_summary.txt  dashboard_removal_summary.txt  documentation_update_summary.txt  install.bat  install.sh  pyproject.toml  reorganization_summary.txt  run_app.py  run_monitor.py  test_basic_functions.py
app/backups/: .gitignore  README.md
app/data/: .gitignore  README.md
app/docs/: EMAIL_CONFIG.md  PROJECT_STRUCTURE.md  REMOVED_COMPONENTS.md
app/removed_modules/: README.md
app/removed_modules/dashboard/: __main__.py  app.py
app/removed_modules/storage/: setup_db.py
app/scripts/: cleanup.py  clear_all_databases.py  clear_database.py  consolidate_databases.py  email_debug.py  force_clear_comments.py  manual_auth.py  recreate_database.py  reset_app.py  setup_reddit_oauth.py  verify_database.py  verify_reddit_app.py
app/src/reddit_sentiment_analysis/: __main__.py  command_monitor.py  config.py  email_service.py  gui.py  interactive.py  monitoring.py  response_generator.py  utils.py
app/tests/: quick_test_brandreview.py  test_email_production.py  test_model_validator.py  test_openai_error_handling.py  test_openai_key.py  test_reddit_api.py  test_subreddit_existence.py  test_workflow_conversion.py  test_workflow_end.py
app/tests/integration/: test_monitoring_email.py  test_monitoring_threads.py  test_new_email_flow.py  (+1 more)
(+17 files in other folders)
